# claude-code-rust

./: Cargo.toml  PLUGIN_DEVELOPMENT.md  README.md  package.json
cc-switch-main/src-tauri/src/commands/: misc.rs
claude-code-rev-main/: package-lock.json
crates/dcc-tools/: Cargo.toml
crates/dcc-tools/src/: lib.rs
crates/dcc-tools/src/blender/: adapter.rs  mod.rs  types.rs
crates/dcc-tools/src/core/: connector.rs  error.rs  mod.rs  traits.rs  types.rs
crates/dcc-tools/src/ue5/: adapter.rs  mod.rs  types.rs
src/: lib.rs  main.rs
src/advanced/: mod.rs  project_init.rs  remote.rs  ssh.rs
src/api/: mod.rs
src/cli/: args.rs  commands.rs  mod.rs  repl.rs
src/commands/: buddy.rs  mod.rs
src/commands/dcc/: blender.rs  mod.rs
src/config/: api_config.rs  mcp_config.rs  mod.rs
src/features/: buddy.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  sampling.rs  server.rs  tools.rs  transport.rs
src/memory/: consolidation.rs  context.rs  history.rs  mod.rs  session.rs  storage.rs
src/plugins/: commands.rs  hooks.rs  isolation.rs  loader.rs  mod.rs  registry.rs
src/services/: agents.rs  auto_dream.rs  magic_docs.rs  mod.rs  plugin_marketplace.rs  stress_tests.rs  team_memory_sync.rs  voice.rs
src/state/: mod.rs
src/terminal/: mod.rs
