[workspace]
resolver = "2"
members = [
    "crates/claude-cli",
    "crates/api-client",
    "crates/tools",
    "crates/runtime",
    "crates/dcc-tools",
    # 后续添加其他Crate
    # "crates/commands",
    # "crates/plugins",
    # "crates/compat-harness",
    # "crates/server",
    # "crates/lsp",
]

# Workspace级别的依赖配置
[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"

# HTTP相关依赖
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
url = "2.5"
urlencoding = "2.1"
flate2 = "1.0"
tokio-tungstenite = "0.21"

# 配置和文件系统
config = "0.14"
toml = "0.8"
dirs = "5.0"
walkdir = "2.4"

# 数据结构和工具
indexmap = "2.1"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# CLI和终端
clap = { version = "4.4", features = ["derive", "cargo"] }
console = "0.15"
indicatif = "0.18"
ratatui = "0.30"

# 其他通用依赖
async-stream = "0.3"
libloading = "0.8"

# Workspace包配置（供成员使用）
[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Claude Code Team"]
license = "MIT"
description = "Claude Code - AI-powered coding assistant (Rust implementation)"

# 虚拟包，实际构建由成员Crate处理
[package]
name = "claude-code-workspace"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
url = "2.5"
urlencoding = "2.1"
flate2 = "1.0"
config = "0.14"
toml = "0.8"
dirs = "5.0"
walkdir = "2.4"
indexmap = "2.1"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive", "cargo"] }
console = "0.15"
indicatif = "0.18"
async-stream = "0.3"
libloading = "0.8"
axum = "0.7"
api-client = { path = "crates/api-client" }
regex = "1.10"
crossterm = "0.27"
base64 = "0.21"
git2 = "0.20"
whoami = "1.5"
retry = "2.0"
ctrlc = "3.4"
glob-match = "0.2"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
